[package]
name = "mashup_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rfd = "0.13"
rustyline = "13.0"

[dependencies.which]
version = "4"
optional = false

